// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"development" environment "noStyling" variation 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    "react-refresh/babel",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"development" environment Default config 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    Array [
      "@dr.pogodin/react-css-modules",
      Object {
        "autoResolveMultipleImports": true,
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
    "react-refresh/babel",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment "noStyling" variation 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`"production" environment Default config 1`] = `
Object {
  "plugins": Array [
    Array [
      "module-resolver",
      Object {
        "extensions": Array [
          ".js",
          ".jsx",
        ],
        "root": Array [
          "./src/shared",
          "./src",
        ],
      },
    ],
    "@babel/transform-runtime",
    Array [
      "@dr.pogodin/react-css-modules",
      Object {
        "autoResolveMultipleImports": true,
        "filetypes": Object {
          ".scss": Object {
            "syntax": "postcss-scss",
          },
        },
        "generateScopedName": [Function],
      },
    ],
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": "defaults",
      },
    ],
    Array [
      "@babel/react",
      Object {
        "runtime": "automatic",
      },
    ],
    "@dr.pogodin/babel-preset-svgr",
  ],
}
`;

exports[`Module exports 1`] = `[Function]`;
